<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/cardview_height"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview"
    cardview:cardCornerRadius="@dimen/cardview_corner_radius"
    cardview:cardUseCompatPadding="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/cardview_margin_bottom">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/carview_picture_height"
            android:id="@+id/cardviewPicture"
            android:background="@drawable/picture"
            android:scaleType="centerCrop"
            android:transitionName="@string/transition_name_card">

        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/cardview_padding_left"
            android:paddingBottom="@dimen/cardview_padding_bottom"
            android:background="@color/cardview_text_background">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cardviewUsername"
                android:text="@string/cardview_username"
                android:textColor="@android:color/white"
                android:textSize="@dimen/cardview_username_text_size"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/firstWord"
                    android:text="@string/first_word_cardview"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/first_word_size"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cardviewTime"
                    android:text="@string/time_cardview_text"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/time_cardview_size"
                    android:layout_marginLeft="@dimen/time_cardview_margin_left"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/like_margin_top_cardview"
                >

                <CheckBox
                    android:id="@+id/likeCheckCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/drawable_selector"
                    />

                <TextView
                    android:id="@+id/cardviewLikes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/likes_cardview"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/likes_cardview_size"
                    android:layout_marginLeft="@dimen/likes_text_margin_left"/>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</android.support.v7.widget.CardView>